<resources>
    <string name="app_name">Launch!</string>
    <string name="notification_text">You\'re under attack!</string>
    <string name="notification_text_ally">Your ally is under attack!</string>
    <string name="welcome">Welcome, Commander!</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy">Privacy</string>
    <string name="rules">Rules</string>
    <string name="disclaimer1">This is a real-world, real-time, location based game. Take care whilst playing, and always be aware of hazards around you.</string>
    <string name="disclaimer2">Playing this game whilst driving, operating machinery, cycling, or whilst in command of air or water craft may be illegal and dangerous.</string>
    <string name="disclaimer3">Observe all local laws, and do not engage in unlawful trespass or other criminal activity.</string>
    <string name="disclaimer4">You are solely responsible for your decision to play this game, and any consequences that may arise from doing so. Keep it fun, stay safe, and don\'t neglect other life responsibilities!</string>
    <string name="privacy1">Launch! is a free game that does not engage in any marketing whatsoever, and personal information will be treated with utmost respect. Policy changes will always be by prior agreement in order to continue playing, should Launch! ever become a marketable product.</string>
    <string name="privacy2">A unique, securely-encrypted key derived from your device\'s identity is used for the sole purpose of identifying your account. Other non-personally-identifying parameters of the device, and lists of running apps/services, may be accessed to prevent cheating.</string>
    <string name="privacy3">Your real world location will be shared with other players. A \"Privacy Zone\" feature exists which allows you to obscure sensitive locations such as home and workplaces from the game. It is advisable to make use of this facility before you begin playing, by clicking the icon on the registration screen or accessing it in the Settings menu later. It bears the following symbol:</string>
    <string name="privacy4">All in-game activity is logged on the server for administration, debugging and development purposes. Cooperation with the UK authorities (or their nominated parties) will be made in the highly unlikely event that they should wish to access the data for the purposes of law enforcement, security or national interests.</string>
    <string name="rules1">Manipulating your GPS location (\"location spoofing\"), multi-accounting from one device and use of emulators are STRICTLY FORBIDDEN. These are all easily detected, and permanent IP bans, with NO PRIOR WARNING, shall apply to each. DO NOT CONTINUE IF YOU ARE USING AN EMULATOR, HAVE MODIFIED YOUR DEVICE\'S IMEI/MEID OR HAVE ANY APPS INSTALLED THAT WOULD FACILITATE GPS POSITION MANIPULATION OR MULTI ACCOUNTING (Such as \"Fake GPS Location\" and \"Parallel Space\"). This is taken very seriously and there will be no more warnings! Play fair or don\'t play at all!</string>
    <string name="rules2">Usernames, avatars or other in-game communications that are offensive, pornographic, gory or discriminatory will not be tolerated and offending players will be banned. If you have a problem with other cultures, the game provides other legitimate features with which to express your disapproval; but don\'t be surprised when they shoot back!</string>
    <string name="rules3">The gameplay mechanics, features and configurations are subject to change at any time, without notice, for development purposes. All players are invited (and encouraged) to share their opinions on these matters via the Discord group.</string>
    <string name="rules4">Exploiting \"faults\" with the game rules, or other forms of \"gamesmanship\", is actively encouraged; it makes the issues easier to identify and fix!</string>
    <string name="agreement">I agree to the above, that I am solely responsible for my own actions and choice to play this game, and will exercise common sense when doing so.</string>
    <string name="noimei">Device Identity Problem</string>
    <string name="noimei1">A unique identity could not be determined for this device, because it is either a non-cellular tablet, emulator, unsupported phone, or the "Telephony"/"Read Phone State" permission was not enabled.</string>
    <string name="noimei2">Unfortunately, only cellular phones (or other devices that at least take a SIM card) are supported.</string>
    <string name="noimei3">Emulator use is strictly forbidden. Registering an account with one will result in a permanent ban not only for that account, but for all devices that are determined to have shared the same IP or geographical address too! DO NOT CONTINUE if this is the case. Press \"Quit\".</string>
    <string name="noimei4">If you are using a regular cellular phone and thus getting this message in error, please \"Quit\", check that all permissions required by this app are enabled in the app settings, and try again. Please e-mail the developer or report to the Discord group if this does not fix the problem.</string>
    <string name="gun_system">Gun System</string>
    <string name="missile_system">Cruise Missile System</string>
    <string name="air_defence_system">Air Defence System</string>
    <string name="hp">%1$dhp</string>
    <string name="hps">%1$d/%2$dhp</string>
    <string name="pts">%1$spt</string>
    <string name="multiplier">x%1$s</string>
    <string name="rank_format">%1$d/%2$d</string>
    <string name="unranked">Unranked</string>
    <string name="cms_not_fitted">Equip this system to fire missiles from your location.</string>
    <string name="sam_not_fitted">Equip this system to intercept enemy missiles from your location.</string>
    <string name="empty">Empty</string>
    <string name="desc_missile_launcher">Missile launch sites fire cruise missiles, allowing you to attack other players globally.</string>
    <string name="desc_sam_site">SAM sites store interceptor missiles and engage enemy cruise missiles with them, protecting you and your assets.</string>
    <string name="desc_gun_turret">Gun turrets fire artillery shells at ground targets, for base defence or lighter close-range assaults.</string>
    <string name="main_text_splash">Systems initialising...</string>
    <string name="main_text_help">Need help?</string>
    <string name="main_communications_status">Communications:</string>
    <string name="main_positioning_status">Positioning:</string>
    <string name="main_comms_establishing">Establishing...</string>
    <string name="main_location_searching">Searching...</string>
    <string name="main_comms_established">Established at %s latency.</string>
    <string name="main_location_found">Established at %s accuracy.</string>
    <string name="main_location_found_not_good_enough">Established at %1$s accuracy, but must be better than %2$s. Searching for better...</string>
    <string name="build_structures">Build Structures</string>
    <string name="cannot_build">You cannot build here as you are too close to other structures.\nYou must be at least %1$s from:</string>
    <string name="cannot_build_ore_mine">You cannot build an ore mine here as all ore in the vicinity is already being mined.\nYou must be at least %1$s from:</string>
    <string name="purchase_missile">Purchase a missile</string>
    <string name="wealth_title">Wealth</string>
    <string name="wealth_generating">You are generating %1$s per hour.</string>
    <string name="wealth_costs">Your online structures cost %1$s per hour.</string>
    <string name="maintenance_costs">Cost-maintainable structures:</string>
    <string name="total_wealth_generation">Total 24 hourly generation: %1$s</string>
    <string name="negative_equity">Your maintenance costs exceed your wealth generation.</string>
    <string name="rules_title">Rules</string>
    <string name="location">Location</string>
    <string name="location_updates">Recent updates:</string>
    <string name="using_location">Using %1$s location (%2$.6f, %3$.6f) with accuracy %4$s from %5$s ago.</string>
    <string name="network_unavailable">Network updates unavailable.</string>
    <string name="gps_unavailable">GPS updates unavailable.</string>
    <string name="none">NONE</string>
    <string name="location_data">%1$s - %2$s (%3$.6f, %4$.6f) @ %5$s</string>
    <string name="attacking">Attacking %1$s</string>
    <string name="engaging">Engaging %1$s</string>
    <string name="intercepting">Intercepting %1$s</string>
    <string name="upload_avatar_title">Upload avatar</string>
    <string name="preview">Preview:</string>
    <string name="reports">Reports</string>
    <string name="players_title">Players</string>
    <string name="players_join_title">The following players wish to join %1$s</string>
    <string name="notification_sound">Notification sound:</string>
    <string name="sound_air_raid">Air Raid</string>
    <string name="sound_default">Default</string>
    <string name="off">Off</string>
    <string name="notification_vibrate">Notification vibrate:</string>
    <string name="vibrate_long">Long</string>
    <string name="vibrate_short">Short</string>
    <string name="short_distances">Short distance units:</string>
    <string name="long_distances">Long distance units:</string>
    <string name="speeds">Speed units:</string>
    <string name="currency_symbol">Currency symbol:</string>
    <string name="no_available_missiles">You have no available missiles in range of this target.</string>
    <string name="no_available_interceptors">You have no available interceptors in range of this target.</string>
    <string name="privacy_zone_title">Privacy zones</string>
    <string name="privacy_zone_blurb">Click on the map to define a new privacy zone, or click existing zones to edit them.</string>
    <string name="privacy_radius">Radius:</string>
    <string name="privacy_move_out">Your player is currently within this privacy zone. It will become effective only once your player has moved outside of it.</string>
    <string name="privacy_in_zone">You are in a privacy zone. Using your last location outside of this zone.</string>
    <string name="sort">Sort:</string>
    <string name="missile_launcher">Missile Launcher</string>
    <string name="sam_site">SAM Site</string>
    <string name="missile_site">Missile Site</string>
    <string name="sentry_gun">Sentry Gun</string>
    <string name="ore_mine">Ore Mine</string>
    <string name="registration">Please register a username and avatar:</string>
    <string name="alliances">Alliances</string>
    <string name="create_alliance">Create Alliance</string>
    <string name="join_alliance">Join Alliance</string>
    <string name="leave_alliance">Leave Alliance</string>
    <string name="declare_war">Declare War</string>
    <string name="alliance_creation">Please specify an alliance name, description and avatar:</string>
    <string name="your_alliance">You are a member of:</string>
    <string name="your_alliance_war">Your alliance is at war with this alliance.</string>
    <string name="alliance_joining">You have requested to join this alliance, and are waiting for a leader to approve or decline.</string>
    <string name="missile">Missile</string>
    <string name="interceptor">Interceptor</string>
    <string name="loot">Loot</string>
    <string name="named_entity">%1$s (%2$s)</string>
    <string name="owners_entity">%1$s\'s %2$s</string>
    <string name="missile_type">%1$s %2$s</string>
    <string name="missile_site_title">missile site</string>
    <string name="sam_site_title">SAM site</string>
    <string name="close">CLOSE</string>
    <string name="imei_quit">QUIT</string>
    <string name="noimei5">Alternatively, press \"Generate Identity\" to create a restricted, non-supported and non-recoverable tablet account.</string>
    <string name="imei_generate">GENERATE IDENTITY</string>
</resources>