<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?attr/PanelTransparency">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:scrollbarThumbVertical="?attr/ScrollBarColour">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lytActions">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/location"
                    android:id="@+id/textView11"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/MainViewSpacing"
                    android:layout_marginLeft="@dimen/MainViewSideMargin"
                    android:layout_marginRight="@dimen/MainViewSideMargin"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/using_location"
                    android:id="@+id/txtUsingLocation"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/MainViewSpacing"
                    android:layout_marginLeft="@dimen/MainViewSideMargin"
                    android:layout_marginRight="@dimen/MainViewSideMargin"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/network_unavailable"
                    android:id="@+id/txtNetworkUnavail"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/MainViewSpacing"
                    android:layout_marginLeft="@dimen/MainViewSideMargin"
                    android:layout_marginRight="@dimen/MainViewSideMargin"
                    android:textColor="?attr/BadColour"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gps_unavailable"
                    android:id="@+id/txtGPSUnavail"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/MainViewSpacing"
                    android:layout_marginLeft="@dimen/MainViewSideMargin"
                    android:layout_marginRight="@dimen/MainViewSideMargin"
                    android:textColor="?attr/BadColour"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_updates"
                    android:id="@+id/textView33"
                    android:layout_marginTop="@dimen/MainViewSpacing"
                    android:layout_marginLeft="@dimen/MainViewSideMargin"
                    android:layout_marginRight="@dimen/MainViewSideMargin"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/none"
                    android:id="@+id/txtUpdatesNone"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/MainViewSpacing"
                    android:layout_marginLeft="@dimen/MainViewSideMargin"
                    android:layout_marginRight="@dimen/MainViewSideMargin"
                    android:textColor="?attr/BadColour"
                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lytUpdates"
                    android:layout_marginLeft="@dimen/MainViewSideMargin"
                    android:layout_marginRight="@dimen/MainViewSideMargin"/>

            </LinearLayout>

            <TextView
                android:background="@drawable/text_button_normal"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ButtonHeight"
                android:text="@string/close"
                android:id="@+id/textView8"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/MainViewSpacing"
                android:layout_marginLeft="@dimen/MainViewSideMargin"
                android:layout_marginRight="@dimen/MainViewSideMargin"
                android:clickable="true"
                android:onClick="ReturnToMainView"
                android:layout_marginBottom="@dimen/MainViewSpacing"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>